--- a/packages/fltpage.sty
+++ b/packages/fltpage.sty
@@ -56,7 +56,7 @@
 \ProvidesPackage{fltpage}[1998/10/29 v.0.3 Floats on full page (SMU)]
 \RequirePackage{ifthen}
 \RequirePackage{afterpage}
-\newcounter{FP@figureC}
+\newcounter{FP@figureC} %Two new counters
 \newcounter{FP@tableC}
 \newsavebox{\FP@floatCorpusBOX}
 \newcommand*{\FP@guide}{}%
@@ -147,7 +147,7 @@
 \ProcessOptions*
 \relax
 
-% This code gets dropped into place for the \begin{Figure} command
+% This code gets dropped into place for the \begin{FPfigure} command
 \newcommand{\FP@floatBegin}[1]{%
   \clearpage %Added to clear the page  -- Andrew Leifer 2012
   \gdef\@captype{#1}%
@@ -159,11 +159,15 @@
   \let\FP@LabelText\@empty %set the label text as empty
   \let\FP@CaptionText\@empty % set the caption text as empty
   \let\FP@optionalCaptionText\@empty %set the optional caption text as empty 
-  \renewcommand\label[1]{\gdef\FP@LabelText{##1}}%set the label text
+  
+  %Redefinie the \label command to save the value placed there in this special LabelText variable
+  \renewcommand\label[1]{\gdef\FP@LabelText{##1}}
 
-%Redefine the caption function with new parameters (I Think?)
-\renewcommand\caption[2][]{\gdef\FP@optionalCaptionText{##1}\gdef\FP@CaptionText{##2}}%
-  \begin{lrbox}{\FP@floatCorpusBOX}%
+%Redefine the caption function so that it no longer creatse a caption, instead it saves the values that would have been passed to caption and places them in these variables. Then it beings a lrbox environment
+\renewcommand\caption[2][]{\gdef\FP@optionalCaptionText{##1}\gdef\FP@CaptionText{##2}}
+
+%THis shows up right wher \begin{FPfigure} would have been
+   \begin{lrbox}{\FP@floatCorpusBOX}%
 	%Text at this position shows up right before the figure
 }
 
@@ -174,16 +178,16 @@
   \stepcounter{FP@\@captype C}%
   \FP@savedLabelCommand{\FP@positionLabel}%
   \FP@helpNote{\@captype}{\FP@positionLabel}%
-  \FP@float{\FP@positionLabel} % location label test
-          {\begin{\@captype}[p!] %Begin figure!
-			%I Believe the continued caption goes here
-			%\FP@savedCaptionCommand{(continued)}	
-             \usebox{\FP@floatCorpusBOX}%this must be handle to the float box 
+  \FP@float{\FP@positionLabel} % location label test %I believe this is the float
+          {\begin{\@captype}[p!] \ContinuedFloat %Begin figure! % NEW<---------- 
+			\FP@savedCaptionCommand{(continued)} % NEW<----------
+             \usebox{\FP@floatCorpusBOX}%this must be handle to the float box?
              \refstepcounter{\@captype}%increment the counter and set the reference?
-             \ifthenelse{\equal{\FP@LabelText}{\@empty}}%if the label text is empty do something
+			 %if the label text is NOT empty,  display the label command
+             \ifthenelse{\equal{\FP@LabelText}{\@empty}}
                 {}{\FP@savedLabelCommand{\expandafter\protect\FP@LabelText}}%
+				%I Believe the continued caption goes here
           \end{\@captype}}
-			%This should end the figure and the continued caption!
            {\addtocounter{\@captype}{-1}} %Subtract off one from the counter?
            {\begin{\@captype}[p!]% %Changed from b to p! Thanks to Eddie. --- Andrew Leifer  	%Start another figure!
              \ifthenelse{\equal{\FP@guide}{\@empty}}%
@@ -192,10 +196,11 @@
                    {\renewcommand{\fnum@table}{\old@Fnum\ {\FP@guide}}}}%
              \setlength{\abovecaptionskip}{2pt plus2pt minus 1pt} % length above caption
              \setlength{\belowcaptionskip}{2pt plus2pt minus 1pt} % length above caption
-             \FP@separatorCaption %I Believe this is the first caption
+			 %THis is where the full caption shows pu
+             \FP@separatorCaption %make the line if we are using it
              \ifthenelse{\equal{\FP@optionalCaptionText}{\@empty}}%
-               {\FP@savedCaptionCommand{\expandafter\protect\FP@CaptionText}}%here is the saved caption command
-{\FP@savedCaptionCommand[\expandafter\protect\FP@optionalCaptionText]{\expandafter\protect\FP@CaptionText}}%
+               {\FP@savedCaptionCommand{\expandafter\protect\FP@CaptionText}}%here is the saved caption command if the optional text is empty
+{\FP@savedCaptionCommand[\expandafter\protect\FP@optionalCaptionText]{\expandafter\protect\FP@CaptionText}}%if the optional text is not empty, than this is the command
            \end{\@captype}}%
 }%
 
