--- a/thesis.tex
+++ b/thesis.tex
@@ -19,10 +19,10 @@
 % incluude each chapter...
 \include{chapters/introduction}
 \include{chapters/colbert}
-%\include{chapters/proprioceptive}
-%\include{chapters/barcode}
-%\include{chapters/barcodeAnalysis}
-%\include{chapters/omegaTurn}
+\include{chapters/proprioceptive}
+\include{chapters/barcode}
+\include{chapters/barcodeAnalysis}
+\include{chapters/omegaTurn}
 \include{chapters/conclusion}
 
 
