closing out colbert section

--- a/references.bib
+++ b/references.bib
@@ -800,6 +800,16 @@ For studying the function of specific neurons in their native circuitry, it is d
 	file = {nn1362.pdf:/Users/andy/Library/Application Support/Firefox/Profiles/x5qrcnjz.default/zotero/storage/E53CEMII/nn1362.pdf:application/pdf;PubMed Snapshot:/Users/andy/Library/Application Support/Firefox/Profiles/x5qrcnjz.default/zotero/storage/IUWTAI52/15580270.html:text/html}
 },
 
+@misc{evans_official_2011,
+	title = {The Official {YAML} Web Site},
+	url = {http://yaml.org/},
+	journal = {{YAML:} {YAML} Ain't Markup Language},
+	author = {Evans, Clarkj},
+	year = {2011},
+	howpublished = {http://yaml.org/},
+	file = {The Official YAML Web Site:/Users/andy/Library/Application Support/Firefox/Profiles/x5qrcnjz.default/zotero/storage/KJ6GFZ6I/yaml.org.html:text/html}
+},
+
 @misc{livolsi_projectors_2008,
 	type = {Projector Central},
 	title = {Projectors and {PC} Gaming},
@@ -2548,6 +2558,23 @@ These results show that the microstructure can be used as a behavioral screen fo
 	file = {Ryu lab: movies:/Users/andy/Library/Application Support/Firefox/Profiles/x5qrcnjz.default/zotero/storage/3ZIN892Q/movies_v6.html:text/html}
 },
 
+@article{fields_electrokinetic_2011,
+	title = {Electrokinetic trapping at the one nanometer limit},
+	volume = {108},
+	issn = {1091-6490},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/21562206},
+	doi = {10.1073/pnas.1103554108},
+	abstract = {{Anti-Brownian} electrokinetic traps have been used to trap and study the free-solution dynamics of large protein complexes and long chains of {DNA.} Small molecules in solution have thus far proved too mobile to trap by any means. Here we explore the ultimate limits on trapping single molecules. We developed a feedback-based {anti-Brownian} electrokinetic trap in which classical thermal noise is compensated to the maximal extent allowed by quantum measurement noise. We trapped single fluorophores with a molecular weight of {\textless} 1 {kDa} and a hydrodynamic radius of 6.7 Å for longer than one second, in aqueous buffer at room temperature. This achievement represents an 800-fold decrease in the mass of objects trapped in solution, and opens the possibility to trap and manipulate any soluble molecule that can be fluorescently labeled. To illustrate the use of this trap, we studied the binding of unlabeled {RecA} to fluorescently labeled single-stranded {DNA.} Binding of {RecA} induced changes in the {DNA} diffusion coefficient, electrophoretic mobility, and brightness, all of which were measured simultaneously and on a molecule-by-molecule basis. This device greatly extends the size range of molecules that can be studied by room temperature feedback trapping, and opens the door to further studies of the binding of unmodified proteins to {DNA} in free solution.},
+	number = {22},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	author = {Fields, Alexander P and Cohen, Adam E},
+	month = may,
+	year = {2011},
+	note = {{PMID:} 21562206},
+	keywords = {Algorithms, Diffusion, {DNA}, {DNA}, {Single-Stranded}, Electrochemistry, Fluorescent Dyes, Hot Temperature, Hydrodynamics, Kinetics, Lasers, Likelihood Functions, Models, Statistical, Nanotechnology, Optics and Photonics, Photons},
+	pages = {8937--8942}
+},
+
 @article{simons_response_1978,
 	title = {Response properties of vibrissa units in rat {SI} somatosensory neocortex},
 	volume = {41},
@@ -3919,6 +3946,16 @@ Fluorescent protein technology has evolved to include genetically encoded biosen
 	keywords = {Important, {PQE}  - definite citation, Sniffing / Foraging},
 	pages = {337--341},
 	file = {364337a0-2.pdf:/Users/andy/Library/Application Support/Firefox/Profiles/x5qrcnjz.default/zotero/storage/ZM2UI9UZ/364337a0-2.pdf:application/pdf;Nature Snapshot:/Users/andy/Library/Application Support/Firefox/Profiles/x5qrcnjz.default/zotero/storage/V3XUTQ85/364337a0.html:text/html}
+},
+
+@misc{the_video_lan_organization_videolan_2012,
+	title = {{VideoLAN} - Official page for {VLC} media player, the Open Source video framework!},
+	url = {http://www.videolan.org},
+	journal = {{VLC} Media Player},
+	author = {The Video Lan Organization},
+	year = {2012},
+	howpublished = {http://www.videolan.org},
+	file = {VideoLAN - Official page for VLC media player, the Open Source video framework!:/Users/andy/Library/Application Support/Firefox/Profiles/x5qrcnjz.default/zotero/storage/AESTU9U7/index.html:text/html}
 },
 
 @article{harris_wormbase:_2010,
