Brought table numbering into compliance with harvard

--- a/harvard-thesis.cls
+++ b/harvard-thesis.cls
@@ -37,6 +37,13 @@
 \RequirePackage{afterpage}
 
 
+
+
+
+
+ 
+
+
 \synctex=1 % turn synctex on automatically to sync between pdf viewer [andy]
 
 %   list an entire bibliography entry inline. Useful for acknowledging when my paper was previously published
@@ -172,3 +179,21 @@
 %Be more forgiving, and stretch word spacing out more so that wormds don't run out into the margins..
 \emergencystretch=1.5em
 %End Andy Spacing
+
+
+%Andy's Numbering Fixf
+%Fix the figure counting so that it isn't affected by sections so as to be complient with harvard's annoying rule that says Figure 4.2.x cannot be followed by Figure 4.5.1.
+\usepackage{chngcntr}
+
+%The way it will now work is that figures will have two numbers and the first number will increment by chapter and the second number will increment within a chapter irrespective of section
+\counterwithout{figure}{part}
+\counterwithout{figure}{section}
+\counterwithin{figure}{chapter}
+
+%Repeat for Tables
+\counterwithout{table}{part}
+\counterwithout{table}{section}
+\counterwithin{table}{chapter}
+
+
+
